[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/interface/game_over/GameOverInterface.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/default_theme/montserrat_eb_128.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/default_theme/montserrat_eb_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/default_theme/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sprites/icons/Arrow.png" type="Texture" id=5]

[node name="GameOverInterface" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.203922, 0.0470588, 0.0470588, 0.870588 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Panel/VBoxContainer"]
margin_top = 91.0
margin_right = 1870.0
margin_bottom = 248.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "FIM DE JOGO"
align = 1
valign = 1
uppercase = true

[node name="Message" type="Label" parent="Panel/VBoxContainer"]
margin_top = 344.0
margin_right = 1870.0
margin_bottom = 423.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "VocÃª Foi Derrotado"
align = 1
valign = 1
uppercase = true

[node name="Options" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 688.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_vertical = 3

[node name="ReturnToTitle" type="Button" parent="Panel/VBoxContainer/Options"]
margin_left = 624.0
margin_right = 1245.0
margin_bottom = 66.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "VOLTAR A TELA INICIAL"
flat = true

[node name="Exit" type="Button" parent="Panel/VBoxContainer/Options"]
margin_left = 741.0
margin_top = 70.0
margin_right = 1129.0
margin_bottom = 136.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "SAIR DO JOGO"
flat = true

[node name="Arrow" type="TextureRect" parent="Panel"]
margin_left = 549.533
margin_top = 715.0
margin_right = 613.533
margin_bottom = 779.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Panel/VBoxContainer/Options/ReturnToTitle" to="." method="_on_ReturnToTitle_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Options/ReturnToTitle" to="." method="_on_ReturnToTitle_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Options/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Options/Exit" to="." method="_on_Exit_pressed"]
